Merged all services