@@ -2,13 +2,18 @@ package com.example.lmsapplication.controller;
 
 import com.example.lmsapplication.requisites.LeaveHistory;
 import com.example.lmsapplication.requisites.Requests;
+import com.example.lmsapplication.response.AcceptResponse;
 import com.example.lmsapplication.response.MainResponse;
+import com.example.lmsapplication.response.RejectResponse;
+import com.example.lmsapplication.response.RevokeResponse;
 import com.example.lmsapplication.service.FetchEmployee;
-import com.example.lmsapplication.service.MainService;
+import com.example.lmsapplication.service.LeaveRequestService;
 import com.example.lmsapplication.tables.Employee;
+import com.example.lmsapplication.tables.Leaves;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/leave_requests")
@@ -16,12 +21,12 @@ public class MainController {
 
     private final LeaveRequestService leaveRequestService;
     private final FetchEmployee fetchEmployee;
-    private final MainService mainService;
 
-    public MainController(LeaveRequestService leaveRequestService, FetchEmployee fetchEmployee,MainService mainService) {
+
+    public MainController(LeaveRequestService leaveRequestService, FetchEmployee fetchEmployee) {
         this.leaveRequestService = leaveRequestService;
         this.fetchEmployee = fetchEmployee;
-        this.mainService = mainService;
+
     }
 
     private Employee requireEmployee(String authorization) {
@@ -35,7 +40,7 @@ public class MainController {
         return employee;
     }
 
-    @GetMapping
+    @GetMapping("/")
     public MainResponse res(@RequestHeader("Authorization") String authorization) {
         Employee employee = requireEmployee(authorization);
         return new MainResponse(
@@ -51,10 +56,11 @@ public class MainController {
                 .employeeId(employee.getEmployeeId())
                 .allLeaves(leaveRequestService.getLeaves(employee.getEmployeeId()))
                 .build();
+
     }
 
     @PostMapping("/apply_leave")
-    public Response applyLeave(@RequestHeader("Authorization") String authorization,
+    public LeaveRequestService.Response applyLeave(@RequestHeader("Authorization") String authorization,
                                @RequestBody Leaves leaveRequest) {
         requireEmployee(authorization);
         return leaveRequestService.applyLeave(leaveRequest);
@@ -67,44 +73,52 @@ public class MainController {
     }
 
     @PutMapping("/revoke_leave/{leave_id}")
-    public Response revokeLeave(@RequestHeader("Authorization") String authorization,
+    public LeaveRequestService.Response revokeLeave(@RequestHeader("Authorization") String authorization,
                                 @PathVariable Integer leave_id) {
         requireEmployee(authorization);
         return leaveRequestService.revokeCompletion(leave_id);
     }
 
     @GetMapping("/view_history_reportees")
-    public List<Leaves> getLeaveHistoryReportees(@RequestHeader("Authorization") String authorization) {
+    public List<Leaves> getLeaveHistoryReportees(
+            @RequestHeader("Authorization") String authorization) {
+
+
         Employee manager = requireEmployee(authorization);
-        List<Employee> reportees = leaveRequestService.getReportees(manager.getEmployeeId());
+
+        List<Employee> reportees =
+                leaveRequestService.getReportees(manager.getEmployeeId());
+
         return reportees.stream()
-                .map(x -> leaveRequestService.getLeaves(x.getEmployeeId()))
-                .toList();
+                .map(emp -> leaveRequestService.getLeaves(emp.getEmployeeId()))
+                .flatMap(List::stream)
+                .collect(Collectors.toList());
     }
+
 
     @GetMapping("/accept")
     public AcceptResponse accept(@RequestHeader("Authorization") String authorization) {
         Employee manager = requireEmployee(authorization);
-        return leaveRequestService.acceptRequest(manager.getEmployeeId());
+        return leaveRequestService.accepted(manager.getEmployeeId());
     }
 
     @PutMapping("/accept/{leave_id}")
-    public Response acceptance(@RequestHeader("Authorization") String authorization,
-                               @PathVariable Integer leave_id) {
-        requireEmployee(authorization);
-        return leaveRequestService.acceptance(leave_id);
+    public LeaveRequestService.Response acceptance(@RequestHeader("Authorization") String authorization,
+                                                   @PathVariable Integer leave_id) {
+        Employee employee  = requireEmployee(authorization);
+        return leaveRequestService.acceptance(leave_id, employee.getEmployeeId());
     }
 
     @GetMapping("/reject")
     public RejectResponse reject(@RequestHeader("Authorization") String authorization) {
         Employee manager = requireEmployee(authorization);
-        return leaveRequestService.reject(manager.getEmployeeId());
+        return leaveRequestService.rejected(manager.getEmployeeId());
     }
 
     @PutMapping("/reject/{leave_id}")
-    public Response rejection(@RequestHeader("Authorization") String authorization,
-                              @PathVariable Integer leave_id) {
-        requireEmployee(authorization);
-        return leaveRequestService.rejected(leave_id);
+    public LeaveRequestService.Response rejection(@RequestHeader("Authorization") String authorization,
+                                                  @PathVariable Integer leave_id) {
+        Employee employee = requireEmployee(authorization);
+        return leaveRequestService.rejectance(leave_id,employee.getEmployeeId());
     }
 }
